--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 DB_URL=mongodb://localhost:27017/utility-app
 NODE_ENV=dev
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
