--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-DB_URL=mongodb://localhost:27017/utility-app
+DB_URL=mongodb://localhost:27017/baseapp
 NODE_ENV=dev
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
-TWITTER_CLIENT_ID=
-TWITTER_CLIENT_SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
+FACEBOOK_CLIENT_ID=537604572989818
+FACEBOOK_CLIENT_SECRET=7f0b0dbf6fcc2f04556c3e30ba1d882e
+TWITTER_CLIENT_ID=i3K7sln3Js1UwiadEr0Fg
+TWITTER_CLIENT_SECRET=xPPXo2VYplf1VazHDCljqmFQF6PvirsbKa3oRJcrUM
+GOOGLE_CLIENT_ID=1035306504764.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=PRZrBOsRQLEM-VTGVyJfHYW0
+GITHUB_CLIENT_ID=0c0c02d936d1f97df441
+GITHUB_CLIENT_SECRET=615f8bcbd997c34575fb62e0ce2a349f5b20ac78
+LINKEDIN_CLIENT_ID=0k1indcnhysk
+LINKEDIN_CLIENT_SECRET=cwC3bZwP70lEDUUd
